--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>🎸 saroj presonal site </title>
+  <link rel ="stylesheet"href="css/styles.css" />
 </head>
 
 <body>
